# cs_3_widget_alina_salakhova

./: .coverage  README.md  pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
