[tool.poetry]
name = "widget"
version = "0.1.0"
description = "Это виджет, который показывает несколько последних успешных банковских операций клиента."
authors = ["Alina Salakhova <alina.salakhova1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
